<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/colorDialogLinearLayout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:minWidth="300dp" >

	<TextView
		android:id="@+id/textView1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="right"
		android:layout_gravity="center_vertical"
		android:text="@string/label_alpha"
		android:paddingLeft="10dp"
		android:paddingRight="10dp"
		android:textSize="20dp"/>
	<SeekBar
		android:id="@+id/alphaSeekBar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:max="255"
		android:paddingLeft="20dp"
		android:paddingRight="20dp" />


	<TextView
		android:id="@+id/textView2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="right"
		android:layout_gravity="center_vertical"
		android:text="@string/label_red"
		android:paddingLeft="10dp"
		android:paddingRight="10dp"/>
	<SeekBar
		android:id="@+id/redSeekBar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:max="255"
		android:paddingLeft="20dp"
		android:paddingRight="20dp" />


	<TextView
		android:id="@+id/textView3"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="right"
		android:layout_gravity="center_vertical"
		android:text="@string/label_green"
		android:paddingLeft="10dp"
		android:paddingRight="10dp"/>
	<SeekBar
		android:id="@+id/greenSeekBar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:max="255"
		android:paddingLeft="20dp"
		android:paddingRight="20dp" />

	<TextView
		android:id="@+id/textView4"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="right"
		android:layout_gravity="center_vertical"
		android:text="@string/label_blue"
		android:paddingLeft="10dp"
		android:paddingRight="10dp"/>
	<SeekBar
		android:id="@+id/blueSeekBar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:max="255"
		android:paddingLeft="20dp"
		android:paddingRight="20dp" />

   <LinearLayout
	   android:background="@android:color/white"
	   android:layout_width="match_parent"
	   android:layout_height="wrap_content"
	   android:layout_margin="20dp"
	   android:orientation="vertical">
	   <View android:id="@+id/colorView"
		   android:layout_width="match_parent"
		   android:layout_height="30dp" />
   </LinearLayout>
   
   <Button
	   android:id="@+id/setColorButton"
	   android:layout_width="wrap_content"
	   android:layout_height="wrap_content"
	   android:layout_gravity="center_horizontal"
	   android:text="@string/button_set_color" />
   
</LinearLayout>
